tests/fail/tuple-lit/check.pion.snap
exit status: 0
stdout:
{
    let _ : (Int, Int, Int, Int) = #error;
    let _ : (Int, Int, Int) = #error;
    let _ : (Int, Int) = #error;
    ()
} : ()

stderr:
error: mismatched types
  ┌─ tests/fail/tuple-lit/check.pion:4:32
  │
4 │ let _ : (Int, Int, Int, Int) = (false, false, false);
  │                                ^^^^^^^^^^^^^^^^^^^^^ type mismatch, expected `(Int, Int, Int, Int)`, found `(Bool, Bool, Bool)`

error: mismatched types
  ┌─ tests/fail/tuple-lit/check.pion:5:27
  │
5 │ let _ : (Int, Int, Int) = (false, false, false);
  │                           ^^^^^^^^^^^^^^^^^^^^^ type mismatch, expected `(Int, Int, Int)`, found `(Bool, Bool, Bool)`

error: mismatched types
  ┌─ tests/fail/tuple-lit/check.pion:6:22
  │
6 │ let _ : (Int, Int) = (false, false, false);
  │                      ^^^^^^^^^^^^^^^^^^^^^ type mismatch, expected `(Int, Int)`, found `(Bool, Bool, Bool)`

